--- a/package.json
+++ b/package.json
@@ -9,38 +9,69 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-progress": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "@shadcn/ui": "^0.0.4",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cookie": "^1.0.2",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "email-validator": "^2.0.4",
+    "express": "^5.1.0",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^7.5.0",
     "express-session": "^1.18.1",
+    "express-validator": "^7.2.1",
+    "formdata-node": "^6.0.3",
     "framer-motion": "^12.6.3",
     "helmet": "^8.1.0",
+    "imagekit": "^6.0.0",
+    "imagekitio-next": "^1.0.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.487.0",
+    "mongo-sanitize": "^1.1.0",
     "mongoose": "^8.13.2",
-    "next": "15.2.4",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.2",
+    "next": "^15.2.4",
+    "rate-limiter-flexible": "^6.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "tailwind-merge": "^3.1.0",
     "tw-animate-css": "^1.2.5",
     "uuid": "^11.1.0",
+    "validator": "^13.15.0",
+    "xss": "^1.0.15",
+    "xss-clean": "^0.1.4",
     "zod": "^3.24.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/cookie-parser": "^1.4.8",
+    "@types/cors": "^2.8.17",
+    "@types/dotenv": "^6.1.1",
+    "@types/express": "^5.0.1",
+    "@types/express-rate-limit": "^5.1.3",
+    "@types/helmet": "^0.0.48",
+    "@types/imagekit": "^3.1.5",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/morgan": "^1.9.9",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "tailwindcss": "^4",
+    "@types/uuid": "^10.0.0",
+    "@types/validator": "^13.12.3",
+    "tailwindcss": "^4.1.3",
     "typescript": "^5"
   }
 }
