--- a/package.json
+++ b/package.json
@@ -40,8 +40,9 @@
     "multer": "^1.4.5-lts.2",
     "next": "^15.2.4",
     "rate-limiter-flexible": "^6.2.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-hook-form": "^7.55.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "tailwind-merge": "^3.1.0",
@@ -53,7 +54,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.3",
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/cookie-parser": "^1.4.8",
@@ -66,12 +67,12 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.12",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/node": "^20.17.30",
+    "@types/react": "^19.1.0",
+    "@types/react-dom": "^19.1.1",
     "@types/uuid": "^10.0.0",
     "@types/validator": "^13.12.3",
     "tailwindcss": "^4.1.3",
-    "typescript": "^5"
+    "typescript": "^5.8.3"
   }
 }
