--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-progress": "^1.1.2",
+    "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "@shadcn/ui": "^0.0.4",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
@@ -39,6 +43,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
     "next": "^15.2.4",
+    "next-auth": "^4.24.11",
     "rate-limiter-flexible": "^6.2.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
