--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
+    "@radix-ui/react-avatar": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.6",
-    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-label": "^2.1.3",
+    "@radix-ui/react-primitive": "^2.0.3",
     "@radix-ui/react-progress": "^1.1.2",
     "@radix-ui/react-separator": "^1.1.2",
-    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@shadcn/ui": "^0.0.4",
     "bcrypt": "^5.1.1",
@@ -32,6 +34,7 @@
     "express-session": "^1.18.1",
     "express-validator": "^7.2.1",
     "formdata-node": "^6.0.3",
+    "formidable": "^3.5.2",
     "framer-motion": "^12.6.3",
     "helmet": "^8.1.0",
     "imagekit": "^6.0.0",
@@ -67,6 +70,7 @@
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.1",
     "@types/express-rate-limit": "^5.1.3",
+    "@types/formidable": "^3.4.5",
     "@types/helmet": "^0.0.48",
     "@types/imagekit": "^3.1.5",
     "@types/jsonwebtoken": "^9.0.9",
