--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cookie": "^1.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.4.7",
     "email-validator": "^2.0.4",
     "express": "^5.1.0",
@@ -54,6 +55,7 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "tailwind-merge": "^3.1.0",
+    "tsc": "^2.0.4",
     "tw-animate-css": "^1.2.5",
     "uuid": "^11.1.0",
     "validator": "^13.15.0",
