--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.7",
     "email-validator": "^2.0.4",
+    "eslint-config-next": "^15.3.0",
     "express": "^5.1.0",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.5.0",
@@ -39,7 +40,6 @@
     "formdata-node": "^6.0.3",
     "formidable": "^3.5.2",
     "framer-motion": "^12.6.3",
-    "glob": "^11.0.1",
     "helmet": "^8.1.0",
     "imagekit": "^6.0.0",
     "imagekitio-next": "^1.0.1",
@@ -49,7 +49,7 @@
     "mongoose": "^8.13.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
-    "next": "^15.2.5",
+    "next": "^15.3.0",
     "next-auth": "^4.24.11",
     "rate-limiter-flexible": "^6.2.1",
     "react": "^19.1.0",
