--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.12",
     "@types/node": "^20.17.30",
-    "@types/react": "^19.1.0",
+    "@types/react": "19.1.2",
     "@types/react-dom": "^19.1.1",
     "@types/uuid": "^10.0.0",
     "@types/validator": "^13.12.3",
