--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "imagekit": "^6.0.0",
     "imagekitio-next": "^1.0.1",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.487.0",
     "mongo-sanitize": "^1.1.0",
     "mongoose": "^8.13.2",
@@ -80,6 +81,7 @@
     "@types/helmet": "^0.0.48",
     "@types/imagekit": "^3.1.5",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/lodash": "^4.17.16",
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.12",
     "@types/node": "^20.17.30",
