--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,9 @@ yarn-error.log*
 # env files (can opt-in for committing if needed)
 .env*
 
+
+# EXCEPT .env.sample
+!.env.sample
 # vercel
 .vercel
 
